--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <title>UserManagement</title>
+    <link
+      rel="shortcut icon"
+      href="./fevicon.ico"
+      type="image/x-icon"
+    />
+    <title>Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
